<resources>
    <string name="app_name">독립기념관 관람</string>
    <string name="check_str">관람 현황</string>
    <string name="myinfo_str">내 정보</string>
    <string name="registration_str">최초 등록</string>
    <string name="certificate_str">확인증</string>
    <string name="regist_info_str">센터 등록 안내</string>
    <string name="login_str">로그인</string>
    <string name="name_str">이름</string>
    <string name="name_hint_str">이름을 입력하세요.</string>
    <string name="number_str">군번</string>
    <string name="number_hint_str">군번을 숫자만 입력하세요.</string>
    <string name="phone_str">휴대폰</string>
    <string name="phone_hint_str">휴대폰 번호를 숫자만 입력하세요.</string>
    <string name="start_str">관람하기</string>
    <string name="homepage_str">홈페이지</string>
    <string name="help_str">도움말</string>
    <string name="map_str">지도</string>
    <string name="personaldata_str">개인 정보</string>
    <string name="additiondata_str">추가 정보</string>
    <string name="participate_str">관람 구분</string>
    <string name="normal_part_str">일반 관람</string>
    <string name="explan_part_str">해설 관람</string>
    <string name="temper_str">소속</string>
    <string name="temper_hint_str">소속 부대를 자세히 입력하세요.</string>
    <string name="army_str">육군</string>
    <string name="navy_str">해군</string>
    <string name="airforce_str">공군</string>
    <string name="mc_str">해병대</string>
    <string name="destination_str">행선지</string>
    <string name="destination_hint_str">행선지를 입력하세요.</string>
    <string name="clause_str">이용 약관</string>
    <string name="clause_detail_1_str">개인정보 수집 및 활용</string>
    <string name="clause_detail_2_str">에 동의하십니까?</string>
    <string name="registration_apply_str">관람 등록</string>
    <string name="apply_str">네</string>
    <string name="cancel_str">아니오</string>
    <string name="hyphen">-</string>
    <string name="time_start_str">관람 시작 시간</string>
    <string name="time_end_str">종료 예정 시간</string>
    <string name="time_elapsed_str">현재 경과 시간</string>
    <string name="ex1_str">1 전시관</string>
    <string name="ex2_str">2 전시관</string>
    <string name="ex3_str">3 전시관</string>
    <string name="ex4_str">4 전시관</string>
    <string name="ex5_str">5 전시관</string>
    <string name="ex6_str">6 전시관</string>
    <string name="openMap_str">지도 열기</string>
    <string name="finish_str">관람 종료하기</string>

    <string name="name_popup_str">이름 : </string>
    <string name="number_popup_str">군번 : </string>
    <string name="phone_popup_str">휴대폰 : </string>
    <string name="temper_popup_str">소속 : </string>
    <string name="destination_popup_str">행선지 : </string>
    <string name="question_popup_str">정확히 입력하셨나요?</string>

    <!-- test -->
    <string name="hello">Hello World, CamTestActivity!</string>
    <!-- UI Elements -->
    <string name="btn_capture">Click</string>
    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
</resources>
