<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_check"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/bt_back_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true" >

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/title_back"
                android:scaleType="fitCenter"
                android:onClick="onBack"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bt_back_layout"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:text="@string/check_str"
            android:textSize="24sp"
            android:fontFamily="@font/m_gothic_extrabold"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/menubar"
        android:layout_below="@id/title_check" />

    <RelativeLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_check"
        android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/layout_nowTime"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_nowTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:textSize="14sp"
                android:fontFamily="@font/m_gothic_bold"/>
            <TextView
                android:id="@+id/tv_nowTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@id/tv_nowTime"
                android:text="현재 시간 : "
                android:textSize="14sp"
                android:fontFamily="@font/m_gothic_normal"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_startTime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/layout_nowTime"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_top">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/time_start_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <TextView
                android:id="@+id/tv_startTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="end|center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_endTime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/layout_startTime"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_center">
            <TextView
                android:id="@+id/tv_endTimeText"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/time_end_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <TextView
                android:id="@+id/tv_endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_elapsedTime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/layout_endTime"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_bottom">
            <TextView
                android:id="@+id/tv_elapsedTimeText"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/time_elapsed_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <TextView
                android:id="@+id/tv_elapsedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_exhibition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_time"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layout_ex_1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_top">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex1_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_ex_2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/layout_ex_1"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_top">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex2_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_ex_3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_ex_1"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_center">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex3_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_ex_4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_ex_2"
            android:layout_toEndOf="@id/layout_ex_3"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_center">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex4_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_ex_5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_ex_3"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_bottom">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex5_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_ex_6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/layout_ex_4"
            android:layout_toEndOf="@id/layout_ex_5"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:background="@drawable/tv_border_bottom">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/ex6_str"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_normal"
                android:background="@drawable/tv_border_title"/>
            <ImageView
                android:id="@+id/iv_ex_6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/m_gothic_bold"/>
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/bt_toMap"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/layout_exhibition"
        android:onClick="onClick"
        android:text="@string/openMap_str"
        android:textSize="16sp"
        android:fontFamily="@font/m_gothic_normal"
        android:background="@drawable/custom_button"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/bt_toMap"
        android:onClick="onClick"
        android:text="@string/finish_str"
        android:textSize="16sp"
        android:fontFamily="@font/m_gothic_normal"
        android:background="@drawable/custom_button"
        style="?android:attr/borderlessButtonStyle" />
</RelativeLayout>